# justforfun

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  fastapi.Dockerfile  makefile  nginx.Dockerfile  nginx.conf  pyproject.toml  requirements.txt
frontend/src/: App.vue
frontend/src/api/: auth.js
frontend/src/views/: LoginView.vue
project/: authentication.py  entrypoint.sh
project/auth/: auth_service.py  dao.py  models.py  router.py  schemas.py
project/books/: models.py  permissions.py  tasks.py  views1.py
project/books/migrations/: 0003_book_created_at.py
project/dao/: .env  database.py  session_maker.py
project/db/: db.sqlite3
project/service/: __init__.py  asgi.py  celery_app.py  settings.py  urls.py
service/alembic/: env.py  kek.py
service/alembic/versions/: 00ac0981e5fc_create_users_table.py  191b45922f50_initial_revision.py
service/auth/: .router.py.swp  SUmodels.py  SUserRegister.py  auth_service.py  main.py  router.py
service/books/: cleaner.py  models.py
service/books/migrations/: 0001_initial.py
service/migration/: .env  database.py
service/service/: asgi.py  settings.py  urls.py
ssl/: cert.pem  privkey.pem
